[package]
name = "nix-overlay-updater"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/haruki7049/nix-overlay-updater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
