[package]
name = "nix-overlay-updater"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/haruki7049/nix-overlay-updater"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["charset", "h2", "http2", "json", "macos-system-configuration", "rustls-tls"], default-features = false }
tokio = { version = "1.41.1", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
