[package]
name = "nix-overlay-updater"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/haruki7049/nix-overlay-updater"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
octocrab = { version = "0.44.1", features = ["default-client"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
